ignore vim swap files

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ DerivedData
 *.ipa
 *.xcuserstate
 
+# Vim
+*.swp
+*.swo
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
